add function statusSeat
